# dynatrace-metric-utils-python

./: README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  python-package.yml
example/: example.py
src/dynatrace-metric-utils/: __init__.py  _metric_values.py  metrics.py
src/dynatrace/metric/utils/: __init__.py  _dynatrace_metadata_enricher.py  _dynatrace_metadata_enrichmer.py  _enrichment.py  _metric.py  _metric_values.py  _normalize.py  dynatrace_metric_api_constants.py  dynatrace_metric_factory.py  dynatrace_metric_serializer.py  dynatrace_metrics_api_constants.py  dynatrace_metrics_factory.py  dynatrace_metrics_serializer.py  metric_error.py  metrics.py
tests/: normalize_tests.py  normalize_tests_parametrized.py  test_dynatrace_metadata_enricher.py  test_dynatrace_metric_factory.py  test_dynatrace_metric_serializer.py  test_enrichment.py  test_metric.py  test_metric_values.py  test_normalize_parametrized.py
